<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oop.android.jagasehat.DemografiActivity"
    tools:ignore="MissingPrefix"
    android:background="@color/color1"
    >

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/relLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/demoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color3"
                android:text="JagaSehat"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="@font/lena"
                />

            <RelativeLayout
                android:layout_below="@id/demoTitle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/jk"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tvKelamin"
                    android:fontFamily="@font/opensans_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color2"
                    android:text="@string/jk"
                    android:textSize="18dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvKelamin"
                    android:layout_marginTop="5dp">
                    <RadioGroup
                        android:id="@+id/radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/radioL"
                            android:fontFamily="@font/opensans_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jk_l"
                            android:textColor="@color/color2"
                            android:checked="true"
                            android:textSize="16dp"/>

                        <RadioButton
                            android:id="@+id/radioP"
                            android:fontFamily="@font/opensans_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jk_p"
                            android:textColor="@color/color2"
                            android:textSize="16dp"/>
                    </RadioGroup>

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usia"
                android:layout_below="@id/jk"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textUsia"
                    android:fontFamily="@font/opensans_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usia"
                    android:textColor="@color/color2"
                    android:textSize="18dp"/>

                <EditText
                    android:padding="6dp"
                    android:textSize="16dp"
                    android:fontFamily="@font/opensans_regular"
                    android:id="@+id/inputUsia"
                    android:textColor="@color/color1"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textUsia"
                    android:layout_marginTop="5dp"
                    android:background="@color/color2"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pendidikan"
                android:layout_below="@id/usia"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tvPendidikan"
                    android:fontFamily="@font/opensans_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pendidikan"
                    android:textColor="@color/color2"
                    android:textSize="18dp"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvPendidikan"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/color2"
                    >
                    <Spinner
                        android:id="@+id/pend"
                        android:fontFamily="@font/opensans_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/prompt"
                        android:popupBackground="@color/color2"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        >
                    </Spinner>

                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pekerjaan"
                android:layout_below="@id/pendidikan"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tvPekerjaan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pekerjaan"
                    android:textColor="@color/color2"
                    android:fontFamily="@font/opensans_bold"
                    android:textSize="18dp"/>

                <RelativeLayout
                    android:layout_height="wrap_content"
                    fontPath="OpenSans-Regular.ttf"
                    android:layout_width="wrap_content"
                    android:layout_below="@id/tvPekerjaan"
                    android:background="@color/color2"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp">

                    <Spinner
                        android:id="@+id/kerja"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/prompt"
                        android:popupBackground="@color/color2"
                        android:paddingTop="6dp"
                        android:fontFamily="@font/opensans_regular"
                        android:paddingBottom="6dp">

                    </Spinner>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_below="@id/pekerjaan"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textEmail"
                    android:fontFamily="@font/opensans_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/color2"
                    android:textSize="18dp"
                    />

                <EditText
                    android:padding="6dp"
                    fontPath="OpenSans-Regular.ttf"
                    android:textSize="16dp"
                    android:id="@+id/inputEmail"
                    android:layout_below="@id/textEmail"
                    android:textColor="@color/color1"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:background="@color/color2"/>

            </RelativeLayout>

            <Button
                android:id="@+id/submitButton"
                android:background="@color/color3"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:textSize="16dp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/color1"
                android:layout_below="@id/email"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"/>

        </RelativeLayout>
    </ScrollView>
</FrameLayout>
